# mmr-risc0-prover

./: .env  .gitignore  Cargo.toml  README.md
client/db-store/: 0.db
config/: anvil.env  anvil.env.example
contracts/: Scarb.toml
contracts/ethereum/: remappings.txt
contracts/src/: groth16_verifier.cairo
db-instances/: 0.db
guest-types/: Cargo.toml
guest_mmr_tests/: Cargo.toml
guest_mmr_tests/src/: lib.rs
host/: Cargo.toml
host/src/: accumulator.rs  lib.rs  main.rs  proof_generator.rs  types.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: guest_mmr.rs  main.rs
methods/guest/src/guest_mmr/: mod.rs
starknet/: Scarb.toml
starknet-handler/: Cargo.toml
starknet-handler/src/: lib.rs
starknet/src/: groth16_verifier.cairo
