[package]
name = "guest-types"
version = "0.1.0"
edition = "2021"

[dependencies]
block-validity = { path = "/home/ametel/source/fossil-offchain-processor/crates/block-validity" }
serde = { version = "1.0", features = ["derive"] }
risc0-zkvm = { version = "1.1.2", default-features = false, features = ['std'] }