[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
guest-types = { path = "../guest-types" }

db-access = { path = "/home/ametel/source/fossil-offchain-processor/crates/db-access" }
mmr-accumulator = { path = "/home/ametel/source/fossil-offchain-processor/crates/mmr-accumulator" }
mmr = { git = "https://github.com/ametel01/rust-accumulators.git", branch = "workspace" }
store = { git = "https://github.com/ametel01/rust-accumulators.git", branch = "workspace" }
# mmr = { path = "/home/ametel/source/rust-accumulators/crates/mmr" }
# store = { path = "/home/ametel/source/rust-accumulators/crates/store" }
garaga_rs = { git = "https://github.com/ametel01/garaga.git" }
starknet-handler = { path = "../starknet-handler" }

methods = { path = "../methods" }
risc0-zkvm = { version = "1.1.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
dotenv = "0.15"
hex = "0.4"
anyhow = "1.0"
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.1.4" }
alloy = { version = "0.5.4", features = ["full"] }
eyre = "0.6"
risc0-groth16 = "1.1.2"
num-bigint = "0.4"
tokio = { version = "1.30", features = ["full"] }
starknet-crypto = "0.7.2"
async-trait = "0.1"
sqlx = "0.8.2"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.13"
block-validity = { path = "/home/ametel/source/fossil-offchain-processor/crates/block-validity" }