[package]
name = "mmr-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
guest-types= {path = "../../guest-types"}
risc0-zkvm = { version = "1.1.2", default-features = false, features = ['std'] }
block-validity = { path = "/home/ametel/source/fossil-offchain-processor/crates/block-validity" }
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.10"
hex = "0.4"
thiserror = "2.0"
starknet-crypto = "0.7.3"

# mmr = { path = "/home/ametel/source/fossil-offchain-processor/crates/mmr", branch = "workspace" }